# skladnica-parser

./: LICENSE  README.md  skladnica.cabal  stack.yaml
src/NLP/: Skladnica.hs
