name:               skladnica
version:            0.1
synopsis:           Parsing Składnica treebank
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2016 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/skladnica-parser
build-type:         Simple


library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , polysoup            >= 0.6      && < 0.7
      , tagsoup             >= 0.13     && < 0.14
      , containers          >= 0.4      && < 0.6
      , text                >= 1.1      && < 1.3
      , mtl                 >= 2.1      && < 2.3
      , filepath            >= 1.4      && < 1.5
      , pathwalk            >= 0.3      && < 0.4
--       , dawg-ord            >= 0.5      && < 0.6
--       , transformers        >= 0.3      && < 0.5
--       , pipes               >= 4.1      && < 4.2
--       , random              >= 1.0      && < 2.0
--       , hashable            >= 1.2      && < 1.3
--       , data-memocombinators    >= 0.5  && < 0.6

    exposed-modules:
        NLP.Skladnica

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/skladnica-parser.git
